<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:padding="12dp">

    <!-- Icono silenciado -->
    <ImageView
        android:id="@+id/imageMuted"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/cd_channel_muted"
        android:src="@android:drawable/ic_lock_silent_mode_off"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Nombre del canal -->
    <TextView
        android:id="@+id/textChannelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/imageMuted"
        app:layout_constraintEnd_toStartOf="@id/imagePinned"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Icono fijado -->
    <ImageView
        android:id="@+id/imagePinned"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/cd_channel_pinned"
        android:src="@android:drawable/ic_menu_send"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/textUnread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Contador no leídos -->
    <TextView
        android:id="@+id/textUnread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_channel_unread_generic"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:padding="6dp"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
